lib/third/test/site/invalid_content_types/json.php
<?php 
header('Content-Type: application/json');

for($i = 0; $i < 10000; $i ++) {
	echo 'A';
}
?>